fix bug with returning wrong position for monitor impact